카카오톡 로그인 따라 만들기

--- a/ch6_view/build.gradle
+++ b/ch6_view/build.gradle
@@ -4,14 +4,11 @@ plugins {
 }
 
 android {
-    viewBinding{
-        enabled = true
-    }
-    namespace 'com.example.vacationstudy'
+    namespace 'com.example.ch6_view'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.vacationstudy"
+        applicationId "com.example.ch6_view"
         minSdk 33
         targetSdk 33
         versionCode 1
