메신저 앱의 인트로 화면 만들기 하는중

--- a/ch9_resource/build.gradle
+++ b/ch9_resource/build.gradle
@@ -4,6 +4,10 @@ plugins {
 }
 
 android {
+
+    viewBinding{
+        enabled = true
+    }
     namespace 'com.example.ch9_resource'
     compileSdk 33
 
