--- a/permission/src/main/AndroidManifest.xml
+++ b/permission/src/main/AndroidManifest.xml
@@ -2,11 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
 
+    <permission android:name="android.permission.CAMERA"
+        android:label="Test Permission"
+        android:description="@string/permission"
+        android:protectionLevel="dangerous"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label=""
+        android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.VacationStudy">
         <activity
