--- a/jetpack/src/main/AndroidManifest.xml
+++ b/jetpack/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:theme="@style/Theme.VacationStudy">
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:parentActivityName=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
