메뉴 구성, 메뉴 선택 이벤트 처리

--- a/jetpack/src/main/AndroidManifest.xml
+++ b/jetpack/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:theme="@style/Theme.VacationStudy">
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:parentActivityName=".MainActivity">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
