뷰 페이저2 사용법

--- a/settings.gradle
+++ b/settings.gradle
@@ -25,3 +25,4 @@ include ':progress'
 include ':ch10_notification'
 include ':jetpack'
 include ':jetpack_recyclerview'
+include ':jetpack_viewpager2'
