--- a/jetpack_viewpager2/build.gradle
+++ b/jetpack_viewpager2/build.gradle
@@ -4,14 +4,15 @@ plugins {
 }
 
 android {
-    namespace 'com.example.permission'
+    namespace 'com.example.jetpack_viewpager'
     compileSdk 33
 
     viewBinding{
         enabled = true
     }
+
     defaultConfig {
-        applicationId "com.example.permission"
+        applicationId "com.example.jetpack_viewpager"
         minSdk 33
         targetSdk 33
         versionCode 1
@@ -37,7 +38,7 @@ android {
 
 dependencies {
 
-
+    implementation 'androidx.viewpager2:viewpager2:1.0.0' //viewpager2사용
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
