--- a/settings.gradle
+++ b/settings.gradle
@@ -26,3 +26,4 @@ include ':ch10_notification'
 include ':jetpack'
 include ':jetpack_recyclerview'
 include ':jetpack_viewpager2'
+include ':jetpack_viewpager2_fragmentstateadapter'
