드로어 레이아웃-옆에서 열리는 화면 구성(애뮬레이터 3 button navigation을 활성화 하지 않으면 옆으로 열리는 화면이 계속 앱이 꺼진다)

--- a/settings.gradle
+++ b/settings.gradle
@@ -27,3 +27,4 @@ include ':jetpack'
 include ':jetpack_recyclerview'
 include ':jetpack_viewpager2'
 include ':jetpack_viewpager2_fragmentstateadapter'
+include ':jetpack_drawerlayout'
