--- a/settings.gradle
+++ b/settings.gradle
@@ -28,3 +28,4 @@ include ':jetpack_recyclerview'
 include ':jetpack_viewpager2'
 include ':jetpack_viewpager2_fragmentstateadapter'
 include ':jetpack_drawerlayout'
+include ':ch11_jetpack'
