--- a/settings.gradle
+++ b/settings.gradle
@@ -29,3 +29,4 @@ include ':jetpack_viewpager2'
 include ':jetpack_viewpager2_fragmentstateadapter'
 include ':jetpack_drawerlayout'
 include ':ch11_jetpack'
+include ':material_library'
