tabLayout,viewPager2연동(애러) ViewPager2 does not support direct child views

--- a/settings.gradle
+++ b/settings.gradle
@@ -30,3 +30,4 @@ include ':jetpack_viewpager2_fragmentstateadapter'
 include ':jetpack_drawerlayout'
 include ':ch11_jetpack'
 include ':material_library'
+include ':material_library_tablayout'
