--- a/settings.gradle
+++ b/settings.gradle
@@ -33,3 +33,4 @@ include ':material_library'
 include ':material_library_tablayout'
 include ':material_library_actionbutton'
 include ':ch12_material'
+include ':intent'
