--- a/intent/src/main/AndroidManifest.xml
+++ b/intent/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:theme="@style/Theme.VacationStudy" >
         <activity
             android:name=".DetailActivity"
-            android:exported="false" >
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="ACTION_EDIT"/>
+                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.categoty.LAUNCHER"/>
+            </intent-filter>
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -19,7 +24,6 @@
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
