패키지 공개 상태

--- a/intent/src/main/AndroidManifest.xml
+++ b/intent/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" >
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,7 +14,6 @@
             <intent-filter>
                 <action android:name="ACTION_EDIT"/>
                 <action android:name="android.intent.categoty.DRFAULT"/>
-                <data android:scheme="http"/>
             </intent-filter>
             <meta-data
                 android:name="android.app.lib_name"
@@ -32,5 +32,8 @@
                 android:value="" />
         </activity>
     </application>
+    <queries>
+        <package android:name="com.example.ch12_material"/>
+    </queries>
 
 </manifest>
