--- a/settings.gradle
+++ b/settings.gradle
@@ -34,3 +34,4 @@ include ':material_library_tablayout'
 include ':material_library_actionbutton'
 include ':ch12_material'
 include ':intent'
+include ':activity_life_cycle'
