--- a/activity_life_cycle/src/main/AndroidManifest.xml
+++ b/activity_life_cycle/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:theme="@style/Theme.VacationStudy">
         <activity
             android:name=".MainActivity"
+            android:windowSoftInputMode="adjustResize"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
