안드로이드 코루틴 이용(코투린으로 ANR 오류 해결)

--- a/settings.gradle
+++ b/settings.gradle
@@ -35,3 +35,4 @@ include ':material_library_actionbutton'
 include ':ch12_material'
 include ':intent'
 include ':activity_life_cycle'
+include ':anr'
