--- a/anr/build.gradle
+++ b/anr/build.gradle
@@ -4,15 +4,16 @@ plugins {
 }
 
 android {
-    namespace 'com.example.jetpack_recyclerview'
+    namespace 'com.example.anr'
     compileSdk 33
 
     viewBinding{
         enabled = true
     }
+
     defaultConfig {
-        applicationId "com.example.jetpack_recyclerview"
-        minSdk 33
+        applicationId "com.example.anr"
+        minSdk 29
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -36,12 +37,13 @@ android {
 }
 
 dependencies {
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'//코루틴 등록
 
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
