리사이클러뷰 클릭하면 onClick 엑티비티로 넘어감

--- a/ch13_activity/src/main/AndroidManifest.xml
+++ b/ch13_activity/src/main/AndroidManifest.xml
@@ -8,6 +8,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.VacationStudy">
         <activity
+            android:name=".onClick"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".AddActivity"
             android:exported="false">
             <meta-data
