--- a/settings.gradle
+++ b/settings.gradle
@@ -40,3 +40,5 @@ include ':ch13_activity'
 include ':broadcastreceiver'
 include ':ch14_receiver'
 include ':service_component'
+include ':outer_component'
+include ':aidl'
