--- a/settings.gradle
+++ b/settings.gradle
@@ -42,3 +42,4 @@ include ':ch14_receiver'
 include ':service_component'
 include ':outer_component'
 include ':aidl'
+include ':receiver_background'
