--- a/settings.gradle
+++ b/settings.gradle
@@ -44,3 +44,5 @@ include ':outer_component'
 include ':aidl'
 include ':receiver_background'
 include ':jobscheduler'
+include ':ch15_service'
+include ':ch15_outer'
