주소록 앱 연동하여 전화번호, 이름 가져오기 (애러)

--- a/settings.gradle
+++ b/settings.gradle
@@ -46,3 +46,4 @@ include ':receiver_background'
 include ':jobscheduler'
 include ':ch15_service'
 include ':ch15_outer'
+include ':contentprovider'
