카메라로 찍은 사진 이미지 띄우기

--- a/contentprovider/src/main/AndroidManifest.xml
+++ b/contentprovider/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
             android:authorities="com.example.contentprovider"
             android:enabled="true"
             android:exported="true">
-
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"></meta-data>
         </provider>
 
         <activity
