--- a/preferences/build.gradle
+++ b/preferences/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 android {
-    namespace 'com.example.contentprovider'
+    namespace 'com.example.preferences'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.contentprovider"
-        minSdk 33
+        applicationId "com.example.preferences"
+        minSdk 24
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -24,13 +24,13 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    viewBinding {
+    viewBinding{
         enabled = true
     }
 }
@@ -39,7 +39,7 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.0'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
