--- a/viewmodel/build.gradle
+++ b/viewmodel/build.gradle
@@ -13,7 +13,6 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -31,6 +30,9 @@ android {
         jvmTarget = '1.8'
     }
     dataBinding{
+        enabled = true
+    }
+    viewBinding{
         enabled = true
     }
 }
