--- a/viewmodel/src/main/AndroidManifest.xml
+++ b/viewmodel/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.VacationStudy">
         <activity
-            android:name=".ViewModel"
+            android:name=".Main"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
