--- a/viewmodel/build.gradle
+++ b/viewmodel/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     //LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
+    implementation "androidx.fragment:fragment-ktx:1.5.6"
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
